# mpris_server

./: LICENSE  README.md  adapter.py  interface.py  player.py  pyproject.toml  requirements.txt  root.py  server.py  setup.py
mpris_server/: __init__.py  adapter.py  adapters.py  base.py  compat.py  constants.py  enums.py  events.py  interface.py  metadata.py  player.py  playlist.py  playlists.py  root.py  server.py  tracklist.py  types.py
mpris_server/interfaces/: __init__.py  interface.py  player.py  playlists.py  root.py  tracklist.py
mpris_server/mpris/: __init__.py  compat.py  metadata.py
