#[build-system]
  #requires = [
    #"setuptools >= 40.9.0",
    #"wheel",
  #]
  #build-backend = "setuptools.build_meta"

[tool]
  [tool.poetry]
    name = "mpris_server"
    version = "0.5.1"
    description = "Publish a MediaPlayer2 MPRIS device to D-Bus."
    license = "AGPL-3.0"
    homepage = "https://alexdelorenzo.dev"
    authors = ["Alex DeLorenzo"]
    readme = "README.md"

  [tool.poetry.dependencies]
    python = ">=3.7"
    emoji = ">=1.2.0, <2.0.0"
    pydbus = ">=0.6.0, <0.7.0"
    pygobject = ">=3.34.0"
    unidecode = ">=1.2.0, <2.0.0"
