[tool]
[tool.poetry]
name = "mpris_server"
version = "0.9.0"
description = "Publish a MediaPlayer2 MPRIS device to D-Bus."
license = "LGPL-3.0"
homepage = "https://alexdelorenzo.dev"
authors = ["Alex DeLorenzo <alex@alexdelorenzo.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
emoji = ">=2.8.0, <3.0.0"
pydbus = ">=0.6.0, <0.7.0"
pygobject = ">=3.34.0"
python = ">=3.11"
unidecode = ">=1.3.7, <2.0.0"

#[build-system]
#requires = [
#    "setuptools >= 40.9.0",
#    "wheel",
#]
#build-backend = "setuptools.build_meta"
